tests/unit_tests/sema/binary_invalid_logical_operands_01.cc
// RUN: %cxx -verify -fcheck %s

struct S {};

bool b = S{} && true; // expected-error {{invalid operands to binary expression ('::S' and 'bool')}}
